Projects and references

--- a/SharpTalk.Twitter.Alerts/SharpTalk.Twitter.Alerts.fsproj
+++ b/SharpTalk.Twitter.Alerts/SharpTalk.Twitter.Alerts.fsproj
@@ -46,6 +46,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Library1.fs" />
     <None Include="Script.fsx" />
+    <None Include="paket.references" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
